# mcp-coding-agent-puchai

./: .env.example  .gitignore  README.md  RENDER_DEPLOYMENT.md  mcp_generator.py  pyproject.toml  render.yaml  render_start.py  requirements.txt
core/: __init__.py  blaxel_client.py  code_generator.py  intent_parser.py
utils/: __init__.py  download_manager.py  syntax_checker.py  zip_creator.py
